# CS3520-Summer-2023-TEST

AssignmentFive/: a5  classes.cpp  classes.hpp  main.cpp  main.hpp  makefile  model.cpp  model.hpp  tests.cpp
AssignmentFour/: Makefile  map.txt  routes  routes.cpp  shortestDistances.txt
AssignmentOne/: CMakeLists.txt  compoundinterest.cpp  findandreplace.cpp  statsfromparagraph.cpp
AssignmentOne/extra-files/: CMakeCache.txt  Makefile  cmake_install.cmake  untitled7.cbp
AssignmentSix/PT1/: Account.h  Address.h  CRC_cards.docx  Customer.h  Dish.h  Menu.h  (+11 more)
AssignmentThree/: food.cpp  food.hpp  game.cpp  game.hpp  game_window.cpp  scores.txt  snake.cpp  snake.hpp  snake_game  snake_game.cpp
AssignmentTwo/: Makefile  dice.cpp  email.txt  main  main.cpp  main.h  maze.cpp  phishingscanner.cpp
FinalProject/: .~lock.CRC_Cards.docx#  CMakeLists.txt  CRC_Cards.docx  UML_diagram1.txt  class_hierachy.txt  classes.cpp  classes.hpp  data.txt  finalproject  main.cpp  makefile  model.cpp  model.hpp  readme.md  reservations.csv
pa10/: Makefile  UML  main.cpp  pa10
pa12/: makefile  pa12
pa13/: Makefile  T-1  T-1.cpp  T-2  T-2.cpp  T-3  T-3.cpp  T-4  T-4.cpp  T-5  T-5.cpp
pa14/: makefile  pa14  pa14.cpp
pa2/: hello.cpp
pa3/: CMakeLists.txt  Makefile  main.cpp
pa4/: CMakeLists.txt  README.md  main.cpp
pa6/: Makefile  main  main.cpp
pa7/: 3d_dynamic  3d_dynamic.cpp  3dmatrix  3dmatrix.cpp  Makefile  charptr  charptr.cpp  practice_1  practice_1.cpp  practice_2  practice_2.cpp  struct  struct.cpp
pa8/: dbgme  demo.webm  myprog.cpp
pa9/: Makefile  main.cpp  pa9
(+7 files in other folders)
