cmake_minimum_required(VERSION 3.20)
project(untitled7)

set(CMAKE_CXX_STANDARD 14)

add_executable(compoundinterest compoundinterest.cpp)
add_executable(statsfromparagraph statsfromparagraph.cpp)
add_executable(findandreplace findandreplace.cpp)
add_executable(file1 file1.cpp)
add_executable(file2 file2.cpp)
add_executable(file3 file3.cpp)
